# pipecat-example

./: .env.example  .gitignore  AGENTS.md  DEVELOPER_GUIDE.md  README.md  config.yml  main.py  pyproject.toml
docs/: DEVELOPER_GUIDE.md  README.md  ai-module.md  function-calling.md  unitree-led-integration.md
scripts/: g1_presenter_gestures.py  wipe_conversation.py
src/ai/: __init__.py  client.py
src/voice_agent/: __init__.py  app.py  cli.py  config.py  constants.py  logging.py  serve.py  settings.py  state.py
src/voice_agent/controller/: server.py
src/voice_agent/memory/: conversation_store.py
src/voice_agent/observers/: whisker.py
src/voice_agent/pipeline/: builder.py  handlers.py  params.py
src/voice_agent/processors/: conversation_autosave.py  filters.py  image_capture.py  llm_response_logger.py  mic_gate.py  transcription_logger.py  unitree_led.py
src/voice_agent/services/: llm.py  stt.py  tts.py
src/voice_agent/sfx/: __init__.py  player.py
src/voice_agent/transports/: local_audio.py
tests/: conftest.py  test_ai_client.py
