[project]
name = "pipecat-class"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai-small-webrtc-prebuilt>=1.0.0",
    "pipecat-ai-whisker>=0.0.10",
    "pipecat-ai[assemblyai,elevenlabs,local,local-smart-turn-v3,openrouter]>=0.0.90",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
    "mss>=10.0.0",
    "pillow>=11.0.0",
    "opencv-python>=4.10.0",
]

[project.scripts]
voice-agent = "voice_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
